[metadata]
name = missingdata
author = Diego Pinheiro
author_email = diegompin@gmail.com
url = https://github.com/dpinlab/missingdata
description = Missing Data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = missing, imputation, trust
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pypots
    matplotlib
    ipykernel
    pandas
    numpy
    setuptools-scm